--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,26 @@ body {
 }
 .title {
     width: 100%;
+    background-color: rgb(60, 60, 60);
+}
+.divlink {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+}
+.divlink .link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+h1 {
     font-weight: 300;
     color: white;
-    background-color: rgb(60, 60, 60);
-    margin: 0;
-    padding: 10px 0 10px 15px;
+    margin: 10px 15px;
+    padding: 0;
 }
 .content {
     font-size: 16px;
